# expense_ai_agent

./: .claude.json  .env.claude  00_READ_ME_FIRST.md  APP_DOCUMENTATION.md  AUTOMATION_SETUP_GUIDE.md  BUG_FIX_SUMMARY.md  COMPLETE_ACTION_CHECKLIST.md  COMPLETE_AUTOMATION_WORKFLOW.md  COMPLETE_DELIVERY_CHECKLIST.md  COMPLETE_SUMMARY.md  DELIVERY_STATUS_REPORT.md  DELIVERY_SUMMARY.md  DETAILED_IMPLEMENTATION_PLAN.md  DOCUMENTATION_INDEX.md  EXACT_CODE_CHANGES_DAY1.md  EXECUTION_CHECKLIST.md  EXECUTIVE_SUMMARY.md  FEATURE_ROADMAP.md  FINAL_SUMMARY.md  HONEST_STATUS.md  IMPLEMENTATION_ROADMAP.md  INDEX_ALL_RESOURCES.md  INTEGRATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  MASTER_DOCUMENTATION_INDEX.md  PDF_PARSER_SOLUTION_SUMMARY.md  PROJECT_OVERVIEW_STRATEGY_MAP.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START_7_DAY.md  README.md  README_AUTOMATION.md  READY_TO_USE.md  SESSION_PROGRESS.md  START_HERE.md  START_HERE_AUTOMATION.md  STATUS_AND_ROADMAP.md  STEP_BY_STEP_ALIGNMENT_GUIDE.md  SYSTEM_DELIVERY_SUMMARY.md  TECHNICAL_ARCHITECTURE.md  (+58 more)
.claude/: settings.local.json
agent_pipeline_framework/: __init__.py
agent_pipeline_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
automation/: chain_config.yaml  orchestrator.py  requirements.txt  run_chain.bat
automation_logs/: chain_report.json
examples/: run_default_pipeline.py  run_simulations.py
lib/: main.dart
simulation_reports/: negative_scenario_report.json  negative_scenario_report.txt  neutral_scenario_report.json  neutral_scenario_report.txt  positive_scenario_report.json  (+1 more)
(+89 files in other folders)
